ejemplos para clase
